	object$oecosimu$simulated instead of object.

	* oecosimu: returns "call" attribute similarly as adipart(),
	hiersimu() and multipart(). The print.oecosimu() output changed,
	and shows the call. print.oecosimu() is able to display adipart(),
	hiersimu() and multipart() results, but does not show all
	informations that those dedicated functions showed about options. 
	
Version 2.1-16 (closed June 18, 2012)

	* envfit: plot() gained new argument 'bg' that triggers labelling
	with ordilabel() using the colour given in 'bg' as the background.

	* simper: added parallel processing for permutation tests in
	accordance with other vegan functions and with similar user
	interface. The code was developed by Eduard Szöcs in
	http://github.com.

	* predict.cca: number of rows must match in the original data and
	'newdata' of cca() result, because original row weights are used
	in scaling the results.  Now the match is checked, and
	non-matching 'newdata' is ignored with warning.  Earlier this gave
	an error.  Reported by Glenn De'ath.

	* betadisper: the method is biased with small, unequal group
	sizes. Bias corrected version can now be used with new argument
	'bias.adjust' (defaults 'FALSE'). The problem was analysed and
	bias correction developed by Adrian Stier and Ben Bolker.

	* .checkSelect: standardise those plotting functions that have a
	'select' argument that controls which rows of the scores are
	plotted. All these functions now use .checkSelect() to check and
	apply 'select' as appropriate.

	* ordipointlabel: gains argument 'select' which allows some rows
	of the plotted scores to be skipped in the same manner as for
	text.cca(). This only applies when a single set of scores is
	plotted. Otherwise it is ignored and a warning issued.

	* ordihull, ordiellipse: defaults to use semitransparent fill
	colour with 'draw = "polygon"', and gain argument 'alpha' to set
	the transparency.

	* ordihull: gained explicit 'col' argument and adds labels after